--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 <!-- Navigation -->
 <nav class="w3-bar w3-black">
-  <a href="#Home" class="w3-button w3-bar-item">Home</a>
-  <a href="#About" class="w3-button w3-bar-item">About</a>
-  <a href="#Projects" class="w3-button w3-bar-item">Projects</a>
-  <a href="#contact" class="w3-button w3-bar-item">Contact</a>
+  <a href="Home" class="w3-button w3-bar-item">Home</a>
+  <a href="About" class="w3-button w3-bar-item">About</a>
+  <a href="Projects" class="w3-button w3-bar-item">Projects</a>
+  <a href="Contact" class="w3-button w3-bar-item">Contact</a>
 </nav>
 
 </body>
