--- a/index.html
+++ b/index.html
@@ -1,23 +1,75 @@
 <!DOCTYPE html>
-<html>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
-<style>
-.content {
-  max-width: 960px;
-  margin: auto;
-}
-</style>
-<body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Xotic Lodge | Live, Stream, Shop</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="font-sans text-gray-800">
 
-<!-- Navigation -->
-<nav class="w3-bar w3-black">
-  <a href="Home" class="w3-button w3-bar-item">Home</a>
-  <a href="About" class="w3-button w3-bar-item">About</a>
-  <a href="Projects" class="w3-button w3-bar-item">Projects</a>
-  <a href="Contact" class="w3-button w3-bar-item">Contact</a>
-</nav>
+  <!-- Hero Section -->
+  <section class="bg-cover bg-center h-screen text-white" style="background-image: url('https://source.unsplash.com/featured/?lodge,forest');">
+    <div class="bg-black bg-opacity-60 h-full flex flex-col justify-center items-center text-center px-4">
+      <h1 class="text-5xl md:text-6xl font-bold mb-4">Welcome to Xotic Lodge</h1>
+      <p class="text-xl md:text-2xl mb-8">Stream, Shop, and Live the Lodge Life</p>
+      <div class="flex flex-wrap justify-center gap-4">
+        <a href="https://www.whatnot.com/user/xoticlodge" target="_blank" class="bg-yellow-500 hover:bg-yellow-600 text-black font-semibold py-3 px-6 rounded-lg">Watch on Whatnot</a>
+        <a href="https://www.youtube.com/@xoticlodge" target="_blank" class="bg-red-500 hover:bg-red-600 text-white font-semibold py-3 px-6 rounded-lg">Subscribe on YouTube</a>
+        <a href="#store" class="bg-green-500 hover:bg-green-600 text-white font-semibold py-3 px-6 rounded-lg">Visit Our Store</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- About Section -->
+  <section class="py-16 px-6 md:px-20 bg-white text-center">
+    <h2 class="text-3xl font-bold mb-4">About Xotic Lodge</h2>
+    <p class="text-lg text-gray-600 max-w-3xl mx-auto">
+      Xotic Lodge is where live streams meet exotic finds. We showcase collectibles, custom goods, and more through our Whatnot channel and YouTube content. Follow us for live unboxings, exclusive drops, and behind-the-scenes vibes from the lodge.
+    </p>
+  </section>
+
+  <!-- YouTube Section -->
+  <section class="py-16 bg-gray-100 text-center">
+    <h2 class="text-3xl font-bold mb-6">Latest on YouTube</h2>
+    <div class="max-w-4xl mx-auto">
+      <iframe width="100%" height="315" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0" allowfullscreen class="rounded-xl shadow-lg"></iframe>
+    </div>
+  </section>
+
+  <!-- Whatnot Section -->
+  <section class="py-16 px-6 bg-white text-center">
+    <h2 class="text-3xl font-bold mb-4">Catch Us Live on Whatnot</h2>
+    <p class="text-lg text-gray-600 mb-6 max-w-2xl mx-auto">
+      Join our weekly Whatnot shows for exclusive auctions, rare collectibles, and live giveaways. It's fast, fun, and full of surprises!
+    </p>
+    <a href="https://www.whatnot.com/user/xoticlodge" target="_blank" class="bg-yellow-500 hover:bg-yellow-600 text-black font-semibold py-3 px-6 rounded-lg">Follow Us on Whatnot</a>
+  </section>
+
+  <!-- Store Preview -->
+  <section id="store" class="py-16 bg-gray-100 text-center">
+    <h2 class="text-3xl font-bold mb-4">Online Store (Coming Soon)</h2>
+    <p class="text-lg text-gray-600 mb-6">Stay tuned as we build our online store with exclusive drops and merch from the lodge.</p>
+    <div class="flex justify-center gap-6">
+      <img src="https://source.unsplash.com/200x200/?product,merch" class="rounded-lg shadow-md" />
+      <img src="https://source.unsplash.com/200x200/?collectibles,toys" class="rounded-lg shadow-md" />
+      <img src="https://source.unsplash.com/200x200/?apparel,streetwear" class="rounded-lg shadow-md" />
+    </div>
+  </section>
+
+  <!-- Contact and Footer -->
+  <section class="py-16 bg-white text-center">
+    <h2 class="text-3xl font-bold mb-4">Stay Connected</h2>
+    <p class="text-lg text-gray-600 mb-4">Email us at <a href="mailto:info@xoticlodge.com" class="text-blue-600 hover:underline">info@xoticlodge.com</a></p>
+    <div class="flex justify-center gap-4">
+      <a href="https://www.youtube.com/@xoticlodge" target="_blank" class="text-red-500 font-semibold">YouTube</a>
+      <a href="https://www.whatnot.com/user/xoticlodge" target="_blank" class="text-yellow-600 font-semibold">Whatnot</a>
+    </div>
+  </section>
+
+  <footer class="bg-gray-800 text-white py-6 text-center">
+    <p>&copy; 2025 Xotic Lodge. All rights reserved.</p>
+  </footer>
 
 </body>
 </html>
