--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <section class="py-16 bg-gray-100 text-center">
     <h2 class="text-3xl font-bold mb-6">Latest on YouTube</h2>
     <div class="max-w-4xl mx-auto">
-      <iframe width="100%" height="315" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0" allowfullscreen class="rounded-xl shadow-lg"></iframe>
+      <iframe width="100%" height="315" src="https://www.youtube.com/shorts/a35bvfMdEg8" frameborder="0" allowfullscreen class="rounded-xl shadow-lg"></iframe>
     </div>
   </section>
 
@@ -60,9 +60,9 @@
   <!-- Contact and Footer -->
   <section class="py-16 bg-white text-center">
     <h2 class="text-3xl font-bold mb-4">Stay Connected</h2>
-    <p class="text-lg text-gray-600 mb-4">Email us at <a href="mailto:info@xoticlodge.com" class="text-blue-600 hover:underline">info@xoticlodge.com</a></p>
+    <p class="text-lg text-gray-600 mb-4">Email us at <a href="mailto:noreply@xoticmail.com" class="text-blue-600 hover:underline">info@xoticmail.com</a></p>
     <div class="flex justify-center gap-4">
-      <a href="https://www.youtube.com/@xoticlodge" target="_blank" class="text-red-500 font-semibold">YouTube</a>
+      <a href="https://www.youtube.com/@YonkoFilms" target="_blank" class="text-red-500 font-semibold">YouTube</a>
       <a href="https://www.whatnot.com/user/xoticlodge" target="_blank" class="text-yellow-600 font-semibold">Whatnot</a>
     </div>
   </section>
