--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <p class="text-xl md:text-2xl mb-8">Stream, Shop, and Live the Lodge Life</p>
       <div class="flex flex-wrap justify-center gap-4">
         <a href="https://www.whatnot.com/user/xoticlodge" target="_blank" class="bg-yellow-500 hover:bg-yellow-600 text-black font-semibold py-3 px-6 rounded-lg">Watch on Whatnot</a>
-        <a href="https://www.youtube.com/@xoticlodge" target="_blank" class="bg-red-500 hover:bg-red-600 text-white font-semibold py-3 px-6 rounded-lg">Subscribe on YouTube</a>
+        <a href="https://www.youtube.com/@YonkoFilms" target="_blank" class="bg-red-500 hover:bg-red-600 text-white font-semibold py-3 px-6 rounded-lg">Subscribe on YouTube</a>
         <a href="#store" class="bg-green-500 hover:bg-green-600 text-white font-semibold py-3 px-6 rounded-lg">Visit Our Store</a>
       </div>
     </div>
