--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h1 class="text-5xl md:text-6xl font-bold mb-4">Welcome to Xotic Lodge</h1>
       <p class="text-xl md:text-2xl mb-8">Stream, Shop, and Live the Lodge Life</p>
       <div class="flex flex-wrap justify-center gap-4">
-        <a href="https://www.whatnot.com/user/xoticlodge" target="_blank" class="bg-yellow-500 hover:bg-yellow-600 text-black font-semibold py-3 px-6 rounded-lg">Watch on Whatnot</a>
+        <a href="https://www.whatnot.com/invite/seller/xoticlodge" target="_blank" class="bg-yellow-500 hover:bg-yellow-600 text-black font-semibold py-3 px-6 rounded-lg">Watch on Whatnot</a>
         <a href="https://www.youtube.com/@YonkoFilms" target="_blank" class="bg-red-500 hover:bg-red-600 text-white font-semibold py-3 px-6 rounded-lg">Subscribe on YouTube</a>
         <a href="#store" class="bg-green-500 hover:bg-green-600 text-white font-semibold py-3 px-6 rounded-lg">Visit Our Store</a>
       </div>
@@ -65,7 +65,7 @@
     <p class="text-lg text-gray-600 mb-4">Email us at <a href="mailto:noreply@xoticmail.com" class="text-blue-600 hover:underline">info@xoticmail.com</a></p>
     <div class="flex justify-center gap-4">
       <a href="https://www.youtube.com/@YonkoFilms" target="_blank" class="text-red-500 font-semibold">YouTube</a>
-      <a href="https://www.whatnot.com/user/xoticlodge" target="_blank" class="text-yellow-600 font-semibold">Whatnot</a>
+      <a href="https://www.whatnot.com/invite/seller/xoticlodge" target="_blank" class="text-yellow-600 font-semibold">Whatnot</a>
     </div>
   </section>
 
