--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
   <!-- Hero Section -->
   
-  <section class="bg-cover bg-center h-screen text-white" style="background-image: url('https://github.com/xoticlodge/xoticlodge.com/blob/main/xl%20logo.jpg');">
-
+ <section class="bg-cover bg-center h-screen text-white" style="background-image: url('https://raw.githubusercontent.com/xoticlodge/xoticlodge.com/main/xl%20logo.jpg');">
     <div class="bg-black bg-opacity-60 h-full flex flex-col justify-center items-center text-center px-4">
       <h1 class="text-5xl md:text-6xl font-bold mb-4">Welcome to Xotic Lodge</h1>
       <p class="text-xl md:text-2xl mb-8">Stream, Shop, and Live the Lodge Life</p>
