--- a/index.html
+++ b/index.html
@@ -8,15 +8,23 @@
 </head>
 <body class="font-sans text-gray-800">
 
+  <!-- Navigation Bar -->
+  <header class="fixed top-0 left-0 w-full z-50 flex justify-between items-center px-6 py-4 bg-black bg-opacity-70">
+    <h1 class="text-white text-2xl font-bold">Xotic Lodge</h1>
+    <div class="flex gap-4">
+      <a href="#store" class="text-white bg-green-500 hover:bg-green-600 px-4 py-2 rounded-lg font-semibold">Visit Shop</a>
+      <a href="#contact" class="text-white bg-blue-500 hover:bg-blue-600 px-4 py-2 rounded-lg font-semibold">Contact</a>
+    </div>
+  </header>
+
   <!-- Hero Section -->
-  
- <section class="bg-cover bg-center h-screen text-white" style="background-image: url('https://raw.githubusercontent.com/xoticlodge/xoticlodge.com/main/xl%20logo.jpg');">
+  <section class="bg-cover bg-center h-screen text-white pt-24" style="background-image: url('https://raw.githubusercontent.com/xoticlodge/xoticlodge.com/main/xl%20logo.jpg');">
     <div class="bg-black bg-opacity-60 h-full flex flex-col justify-center items-center text-center px-4">
       <h1 class="text-5xl md:text-6xl font-bold mb-4">Welcome to Xotic Lodge</h1>
       <p class="text-xl md:text-2xl mb-8">Stream, Shop, and Live the Lodge Life</p>
       <div class="flex flex-wrap justify-center gap-4">
         <a href="https://www.whatnot.com/user/xoticlodge" target="_blank" class="bg-yellow-500 hover:bg-yellow-600 text-black font-semibold py-3 px-6 rounded-lg">Watch on Whatnot</a>
-        <a href="https://www.youtube.com/@YonkoFilms" target="_blank" class="bg-red-500 hover:bg-red-600 text-white font-semibold py-3 px-6 rounded-lg">Subscribe on YouTube</a>
+        <a href="https://www.youtube.com/@xoticlodge" target="_blank" class="bg-red-500 hover:bg-red-600 text-white font-semibold py-3 px-6 rounded-lg">Subscribe on YouTube</a>
         <a href="#store" class="bg-green-500 hover:bg-green-600 text-white font-semibold py-3 px-6 rounded-lg">Visit Our Store</a>
       </div>
     </div>
@@ -58,12 +66,12 @@
     </div>
   </section>
 
-  <!-- Contact and Footer -->
-  <section class="py-16 bg-white text-center">
+  <!-- Contact Section -->
+  <section id="contact" class="py-16 bg-white text-center">
     <h2 class="text-3xl font-bold mb-4">Stay Connected</h2>
-    <p class="text-lg text-gray-600 mb-4">Email us at <a href="mailto:noreply@xoticmail.com" class="text-blue-600 hover:underline">info@xoticmail.com</a></p>
+    <p class="text-lg text-gray-600 mb-4">Email us at <a href="mailto:info@xoticlodge.com" class="text-blue-600 hover:underline">info@xoticlodge.com</a></p>
     <div class="flex justify-center gap-4">
-      <a href="https://www.youtube.com/@YonkoFilms" target="_blank" class="text-red-500 font-semibold">YouTube</a>
+      <a href="https://www.youtube.com/@xoticlodge" target="_blank" class="text-red-500 font-semibold">YouTube</a>
       <a href="https://www.whatnot.com/user/xoticlodge" target="_blank" class="text-yellow-600 font-semibold">Whatnot</a>
     </div>
   </section>
