--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <!-- Chatbot Window -->
 <div id="chatbot" class="fixed bottom-20 right-6 w-80 max-w-full bg-white shadow-lg rounded-lg flex flex-col overflow-hidden hidden z-60" style="height: 400px;">
   <div class="bg-green-600 text-white px-4 py-3 flex justify-between items-center">
-    <h3 class="font-bold">Xotic Lodge AI Chat</h3>
+    <h3 class="font-bold">Chat with Xotic</h3>
     <button id="chatbot-close" class="font-bold hover:text-gray-300">&times;</button>
   </div>
   <div id="chatbot-messages" class="flex-1 p-4 overflow-y-auto text-gray-800" style="background:#f9fafb;"></div>
