--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Xotic Lodge | Live, Stream, Shop</title>
+  <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/xoticlodge/xoticlodge.com/main/xl%20logo.jpg">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Xotic Lodge | Live, Stream, Shop</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="font-sans text-gray-800">
